--- a/prism-app/Views/HubPage.xaml
+++ b/prism-app/Views/HubPage.xaml
@@ -73,16 +73,15 @@
                                 <TextBlock Grid.Column="0" Text="{Binding Title}" Foreground="{ThemeResource ListViewItemOverlayForegroundThemeBrush}" Style="{StaticResource TitleTextBlockStyle}" Height="30" Margin="15,0,15,0" HorizontalAlignment="Left"/>
                                 <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Orientation="Horizontal" Margin="15,0,15,0">
                                     <FontIcon x:Uid="Likes" FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf087;"/>
-                                    <TextBlock TextWrapping="Wrap" Text="{Binding LikeCount}" Margin="10,0,0,0" VerticalAlignment="Center" />
-                                    <FontIcon x:Uid="Hits" FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf06e;" Margin="20,0,0,0" VerticalAlignment="Center"/>
-                                    <TextBlock TextWrapping="Wrap" Text="{Binding HitCount}" Margin="10,0,0,0" VerticalAlignment="Center"/>
+                                    <TextBlock TextWrapping="Wrap" Text="{Binding LikeCount}" MinWidth="40" Margin="10,0,0,0" VerticalAlignment="Center" />
+                                    <FontIcon x:Uid="Dislikes" FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xF088;"/>
+                                    <TextBlock TextWrapping="Wrap" Text="{Binding DislikeCount}" MinWidth="40" Margin="10,0,0,0" VerticalAlignment="Center" />
+                                    <FontIcon x:Uid="Hits" FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf06e;" VerticalAlignment="Center"/>
+                                    <TextBlock TextWrapping="Wrap" Text="{Binding HitCount}" MinWidth="40" Margin="10,0,0,0" VerticalAlignment="Center"/>
                                 </StackPanel>
                             </Grid>
                             <Grid>
-                                <StackPanel Grid.Column="0" Orientation="Horizontal">
-                                    <FontIcon x:Uid="Online" FontFamily="{StaticResource AwesomeIcons}" Glyph="{StaticResource ResourceKey=OnlineGlyph}" Visibility="{Binding Online, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="15,0,0,0" VerticalAlignment="Center" />
-                                    <TextBlock Text="{Binding Creator}" TextWrapping="NoWrap" VerticalAlignment="Center" FontWeight="Bold" Foreground="{ThemeResource ListViewItemOverlaySecondaryForegroundThemeBrush}" Style="{StaticResource CaptionTextBlockStyle}"  Margin="15,0,15,10" />
-                                </StackPanel>
+                                <local:ProfileStatusUserControl Margin="10,0,0,0"/>
                                 <TextBlock Grid.Column="1" Text="{Binding Creation}" Foreground="{ThemeResource ListViewItemOverlaySecondaryForegroundThemeBrush}" Style="{StaticResource CaptionTextBlockStyle}" TextWrapping="NoWrap" Margin="15,0,15,10" HorizontalAlignment="Right"/>
                             </Grid>
 
