initial work on profile

--- a/prism-app/App.xaml
+++ b/prism-app/App.xaml
@@ -33,6 +33,7 @@
         <x:String x:Key="MapMarkerGlyph">&#xf041;</x:String>
         <x:String x:Key="HomePage">Socialalert.Views.HubPage</x:String>
         <x:String x:Key="MapStatisticPage">Socialalert.Views.MapStatisticPage</x:String>
+        <x:String x:Key="ProfileDetailPage">Socialalert.Views.ProfileDetailPage</x:String>
         <x:String x:Key="BingMapKey">AuXHB715SopOp7_UWBAwr0OzWS7-VZuepw59IdjV6E4DmYYGb0JVGuq5FUOF4TFT</x:String>
     </prism:MvvmAppBase.Resources>
 </prism:MvvmAppBase>
