--- a/prism-app/Views/ProfileStatisticUserControl.xaml
+++ b/prism-app/Views/ProfileStatisticUserControl.xaml
@@ -36,7 +36,7 @@
                 <local:ProfileStatusUserControl/>
             </StackPanel>
             <StackPanel Grid.Column="0" Grid.Row="1"  Grid.RowSpan="2" Orientation="Horizontal" Height="90">
-                <AppBarToggleButton Label="Follow" IsChecked="{Binding IsFollowed}" Command="{Binding ToggleFollowCommand}" Visibility="{Binding ToggleFollowCommand, Converter={StaticResource CommandToVisibilityConverter}}">
+                <AppBarToggleButton Label="Follow" IsChecked="{Binding IsFollowed}" Command="{Binding ToggleFollowCommand}">
                     <AppBarToggleButton.Icon>
                         <FontIcon FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf08a;"/>
                     </AppBarToggleButton.Icon>
