--- a/prism-app/Views/TopAppBarUserControl.xaml
+++ b/prism-app/Views/TopAppBarUserControl.xaml
@@ -1,4 +1,5 @@
-﻿<UserControl x:Class="Socialalert.Views.TopAppBarUserControl"
+﻿<UserControl x:Name="controlRoot"
+             x:Class="Socialalert.Views.TopAppBarUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:Socialalert.Views"
@@ -10,7 +11,7 @@
              mc:Ignorable="d"
 			 prism:ViewModelLocator.AutoWireViewModel="True"
 			 d:DesignHeight="100"
-			 d:DesignWidth="400">
+			 d:DesignWidth="600">
     
     <!-- Page content -->
     <StackPanel Orientation="Horizontal">
