--- a/prism-app/Views/ProfileStatisticUserControl.xaml
+++ b/prism-app/Views/ProfileStatisticUserControl.xaml
@@ -10,14 +10,15 @@
              mc:Ignorable="d"
 			 prism:ViewModelLocator.AutoWireViewModel="True"
              d:DataContext="{Binding Source={d:DesignData Source=/Data/ProfileStatisticUserControl.json, Type=vm:ProfileStatisticViewModel}}"
-			 d:DesignHeight="300"
+			 d:DesignHeight="500"
 			 d:DesignWidth="400">
     
     <!-- Page content -->
     <Grid x:Name="ContentGrid">
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="250"/>
             <RowDefinition Height="120"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <Image Grid.Row="0" Source="{Binding ImageUrl}" Stretch="Uniform" AutomationProperties.Name="{Binding Nickname}" Margin="20,0" HorizontalAlignment="Left"/>
@@ -66,6 +67,15 @@
                 <FontIcon x:Uid="Pictures" FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf03e;" VerticalAlignment="Center"/>
                 <TextBlock TextWrapping="NoWrap" Text="{Binding PictureCount}" Margin="10,0,0,0" VerticalAlignment="Center"/>
             </StackPanel>
+        </Grid>
+        <Grid Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Grid.Row="0" x:Uid="BiographyTitle" Text="Biography" Style="{ThemeResource SubheaderTextBlockStyle}" Margin="10" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <TextBlock Grid.Row="1" Text="{Binding Biography}" Style="{StaticResource BodyTextBlockStyle}" Margin="10"/>
         </Grid>
     </Grid>
 </UserControl>
