--- a/prism-app/Views/CategoryDetailPage.xaml
+++ b/prism-app/Views/CategoryDetailPage.xaml
@@ -91,20 +91,7 @@
             </i:Interaction.Behaviors>
             <GridView.ItemTemplate>
                 <DataTemplate>
-                    <Grid Height="110" Margin="10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="200"/>
-                            <ColumnDefinition Width="200"/>
-                        </Grid.ColumnDefinitions>
-                        <Border Background="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}">
-                            <Image Source="{Binding ImageUrl}" Stretch="UniformToFill" AutomationProperties.Name="{Binding Title}" HorizontalAlignment="Left"/>
-                        </Border>
-                        <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0" >
-                            <TextBlock Text="{Binding Title}" Style="{StaticResource TitleTextBlockStyle}" TextWrapping="NoWrap"/>
-                            <local:ProfileStatusUserControl Margin="0,10,0,0"/>
-                            <TextBlock Text="{Binding Description}" Style="{StaticResource BodyTextBlockStyle}" Margin="0,10,0,0" MaxHeight="60"/>
-                        </StackPanel>
-                    </Grid>
+                    <local:PicturePreviewUserControl/>
                 </DataTemplate>
             </GridView.ItemTemplate>
         </GridView>
