--- a/prism-app/Views/ProfileDetailPage.xaml
+++ b/prism-app/Views/ProfileDetailPage.xaml
@@ -12,8 +12,9 @@
     xmlns:prism="using:Microsoft.Practices.Prism.StoreApps"
     xmlns:bm="using:Bing.Maps"
     xmlns:conv="using:Socialalert.Converters"
+    xmlns:mvvm="using:Microsoft.Practices.Prism.Mvvm"
+    mvvm:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d"
-    prism:ViewModelLocator.AutoWireViewModel="True"
     d:DataContext="{Binding Source={d:DesignData Source=/Data/ProfileDetailPage.json, Type=vm:ProfileDetailPageViewModel}}">
 
     <prism:VisualStateAwarePage.Resources>
